pandas/src/datetime/np_datetime.h

typedef enum {
        PANDAS_FR_Y = 0, /* Years */
        PANDAS_FR_M = 1, /* Months */
        PANDAS_FR_W = 2, /* Weeks */
        /* Gap where NPY_FR_B was */
        PANDAS_FR_D = 4, /* Days */
        PANDAS_FR_h = 5, /* hours */
        PANDAS_FR_m = 6, /* minutes */
        PANDAS_FR_s = 7, /* seconds */
        PANDAS_FR_ms = 8,/* milliseconds */
        PANDAS_FR_us = 9,/* microseconds */
        PANDAS_FR_ns = 10,/* nanoseconds */
        PANDAS_FR_ps = 11,/* picoseconds */
        PANDAS_FR_fs = 12,/* femtoseconds */
        PANDAS_FR_as = 13,/* attoseconds */
        PANDAS_FR_GENERIC = 14 /* Generic, unbound units, can convert to anything */
} PANDAS_DATETIMEUNIT;
typedef struct {
        npy_int64 year;
        npy_int32 month, day, hour, min, sec, us, ps, as;
} pandas_datetimestruct;
PANDAS_DATETIMEUNIT get_datetime64_unit(PyObject *obj);